[package]
name = "rotunda"
version = "0.0.0"
edition = "2024"
description = "Memory arena and associated smart pointers"
license = "MIT/Apache-2.0"
readme = "./Readme.md"

[dependencies.serde_core]
version = "1"
optional = true

[features]
default = []
nightly = [
    "nightly_ptr_metadata",
    "nightly_coerce_pointee",
]
nightly_ptr_metadata = []
nightly_coerce_pointee = []
nightly_can_vector = ["std"]
std = []
serde = ["dep:serde_core"]
