[package]
name = "rotunda"
version = "0.0.0"
edition = "2024"
description = "Memory arena and associated smart pointers"
license = "MIT/Apache-2.0"
readme = "./Readme.md"

[dependencies.serde_core]
version = "1"
optional = true

[dependencies.allocator-api2]
version = "0.4.0"
optional = true

[features]
default = ["allocator-api2", "std"]
nightly = []
allocator-api2 = ["dep:allocator-api2"]
std = []
serde = ["dep:serde_core"]
