# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "rotunda"
version = "0.0.1"
edition = "2024"
description = "Memory arena and associated smart pointers"
license = "MIT/Apache-2.0"
readme = "./Readme.md"
homepage = "https://github.com/burtonageo/rotunda"

[dependencies.serde_core]
version = "1"
optional = true

[dependencies.allocator-api2]
version = "0.4.0"
optional = true

[dependencies.rand]
version = "0.10.0"
optional = true
default-features = false

[features]
default = ["allocator-api2", "rand"]
nightly = []
allocator-api2 = ["dep:allocator-api2", "rand?/alloc"]
std = ["rand?/std"]
serde = ["dep:serde_core"]
rand = ["dep:rand"]
